# rdf-delta-python

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: test.yml
rdf_delta/: __init__.py  client.py
tests/delta_client/: conftest.py  docker-compose.yml  test_delta_client.py
