[tool.poetry]
name = "rdf-delta-python"
version = "0.1.0"
description = "Python client and parser library for RDF Delta."
authors = ["Edmond Chuc <edmond@kurrawong.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "rdf_delta_python"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
rdflib = "^7.0.0"
lark = "^1.1.9"
loguru = "^0.7.2"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
