[tool.poetry]
name = "rdf-delta-python"
version = "0.1.1"
description = "Python client and parser library for RDF Delta."
authors = ["Edmond Chuc <edmond@kurrawong.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "rdf_delta"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
rdflib = "^7.0.0"
lark = "^1.1.9"
loguru = "^0.7.2"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I001",
    "I002"
]